# scrapy-ai

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: .env  config.py  main.py  models.py  schemas.py  scrape_book.py  scrape_hn.py
backend/app/core/: config.py
backend/app/services/: scrape_book.py  scrape_hn.py
backend/app/utils/: models.py  schemas.py
frontend/: Dockerfile  nginx.conf
frontend/app/: .env  index.html  package.json
frontend/app/src/components/: ChatBot.vue  ChatContainer.vue  ChatSettings.vue  MessageInput.vue  MessageList.vue  TypingIndicator.vue  WelcomeBanner.vue
frontend/app/src/pages/: chat.vue  settings.vue  welcome.vue
frontend/app/src/stores/: chat.js  settings.js
frontend/app/src/styles/: settings.scss
n8n_data/: config  database.sqlite
