[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Lesnier Garcia Estrada",email = "lesier.estrada@gmail.com"}
]
package-mode = false

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "redis (>=5.2.1,<6.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "urljoin (>=1.0.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "chardet (>=5.2.0,<6.0.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "uvicorn (>=0.27.1,<0.28.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
